# bill_layout_script

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  batch.py  batch.sh  batchread.sh  conguagli.py  countlayouts.py  doc.txt  export.py  makelayouts.sh  read.py  readall.sh  upload.py
.cmake/: .test_calendar.cpp  .test_charconv.cpp  .test_format.cpp  .test_map.cpp  .test_pdfdoc.cpp
bls/: axpo.bls  axpo_old.bls  controllo.bls  cura.bls  enel.bls  greennetwork.bls  italpower.bls  lenergia.bls  metaenergia.bls  sorgenia.bls
editor/: CMakeLists.txt
editor/src/: box_dialog.cpp  box_dialog.h  box_editor_panel.cpp  box_editor_panel.h  clipboard.cpp  compile_error_diag.h  editor.cpp  editor.h  editor_evt.cpp  image_panel.cpp  image_panel.h  layout_ext.cpp  layout_ext.h  layout_options_dialog.cpp  layout_options_dialog.h  main.cpp  output_dialog.cpp  output_dialog.h  pdf_to_image.cpp  pdf_to_image.h
fatture/: axpo.bls  axpo.layout  axpo_old.bls  controllo.bls  controllo.txt  cura.bls  enel.bls  enel.layout  eon.bls  greennetwork.bls  italpower.bls  italpower.layout  lenergia.bls  sen.bls  sorgenia.bls  sorgenia.layout
layout/: axpo.bls  axpo_old.bls  controllo.bls  cura.bls  enel.bls  eon.bls  greennetwork.bls  italpower.bls  lenergia.bls  sen.bls  sorgenia.bls
layouts/: axpo.bls  axpo_old.bls  controllo.bls  cura.bls  edison.bls  enel.bls  energrid.bls  errors.bls  greennetwork.bls  italpower.bls  lenergia.bls  metaenergia.bls  sen.bls  sorgenia.bls
layouts/axpo/: axpo.bls  axpo_old.bls  controllo.bls
layouts/enel/: controllo.bls  enel.bls  enel_old.bls  sen.bls
layouts/italpower/: controllo.bls  italpower.bls  italpower_new.bls  italpower_old.bls
layouts/misc/: edison.bls  energrid.bls  estra.bls  greennetwork.bls  heracomm.bls  lenergia.bls  metaenergia.bls
layouts/misc/amg/: amg_gas.bls  amg_luce.bls  controllo.bls
layouts/sorgenia/: controllo.bls  parse_dettaglio.bls  parsing_dettaglio.bls  parsing_dettaglio_gas.bls  sorgenia.bls  sorgenia_gen16.bls  sorgenia_new.bls  sorgenia_old.bls
main/: blsdump.cpp  reader.cpp  sizes.cpp
messages/: CMakeLists.txt  bls_en.po  bls_it.po  enums.pot
pyreader/: CMakeLists.txt  pyreader.cpp
readergui/: CMakeLists.txt
readergui/resources/: resources.rc
readergui/src/: main.cpp
readergui/src/gui/: data_table_types.h  data_table_view.h  dati_fattura.h  readergui.cpp  readergui.h  safe_queue.h
resources/: icons.cmake  resources.rc
script/: batchexport.sh  batchread.sh  checklayouts.sh  clearcache.sh  clienti.json  conguagli.py  convert.py  countlayouts.py  export.py  fixschede.py  forniture.txt  makelayouts.sh  pyreader.py  read.py  savedrive.py  sendpdf.py  testcompile.sh  update.py  upload.py  uploadexcel.py  uploadjson.py
src/: assembler.cpp  binary_bls.cpp  binary_bls.h  binary_io.h  bitset.h  blsdump.cpp  box_editor_panel.cpp  bytecode.cpp  bytecode.h  bytecode_printer.h  compiler.cpp  content_view.h  contig_split_view.h  dates.cpp  datetime.cpp  datetime.h  enum_sequence.h  enum_variant.h  enums.h  exceptions.h  fixed_point.h  format.h  functions.cpp  functions.h  image_panel.cpp  image_panel.h  intl.cpp  intl.h  json_value.h  keywords.cpp  layout.cpp  layout.h  layout.tcc  lexer.cpp  lexer.h  main.cpp  main.h  parse_string.cpp  parser.cpp  parser.h  (+34 more)
src/batch/: main.cpp
src/compiler/: assembler.cpp  assembler.h  compiler.cmake  keywords.cpp  lexer.cpp  main.cpp  parser.cpp  parser.h  parsestr.cpp  parsestr.h  tokenizer.cpp  tokenizer.h
src/editor/: box_dialog.cpp  box_dialog.h  box_editor_panel.cpp  box_editor_panel.h  clipboard.cpp  clipboard.h  editor.cmake  editor.cpp  editor.h  editor_evt.cpp  image_panel.cpp  image_panel.h  layout_ext.cpp  layout_ext.h  main.cpp  main.h  output_dialog.cpp  output_dialog.h  pdf_to_image.cpp  pdf_to_image.h  resources.h
src/reader/: content_view.h  dates.cpp  decimal.h  disassembler.cpp  disassembler.h  dispatcher.cpp  evaluate.cpp  functions.cpp  functions.h  locale_ita.h  main.cpp  parser.cpp  parser.h  reader.cmake  reader.cpp  reader.h  result.cpp  result.h  stack.h  strings.cpp  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h  variable.cpp  variable.h  variable_ref.cpp  variable_ref.h
src/shared/: arguments.h  binary_io.cpp  binary_io.h  box_layout.cpp  box_layout.h  bytecode.cpp  bytecode.h  decimal.h  layout.cpp  layout.h  pdf_document.cpp  pdf_document.h  pipe.cpp  pipe.h  pipe_io.h  pipe_io.tcc  pipe_linux.cpp  pipe_windows.cpp  proc_linux.cpp  proc_linux.h  proc_stream.cpp  proc_stream.h  proc_windows.cpp  proc_windows.h  shared.cmake  subprocess.cpp  subprocess.h  unicode.cpp  utils.cpp  utils.h  xpdf.cpp  xpdf.h
src/utils/: contig_split_view.h  enum_variant.h  enums.h  filter_enum_sequence.h  format.h  json_value.h  static_map.h  translations.cpp  translations.h  utils.h
utils/: CMakeLists.txt  blsdump.cpp  compiler.cpp  pyreader.cpp  reader.cpp  sizes.cpp
